--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ main {
 
 .tab-content {
     display: none;
+    margin: 20px;
 }
 
 .tab-content.active {
@@ -104,6 +105,7 @@ main {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    
 }
 
 /* Adjust the iframe to be responsive */
@@ -124,7 +126,15 @@ main {
 }
 
 .description p {
-    font-size: 18px;
+    font-size: 20px;
+    margin-inline: 50px;
+    text-align: center;
+}
+
+.description h4{
+    color: #9A3BFF;
+    font-size: 30px;
+    margin-bottom: -30px;
 }
 
 p {
@@ -166,7 +176,7 @@ p {
     }
 
     .description p{
-        margin: 30px;
+        margin: 0px;
         text-align: justify;
     }
 
@@ -174,6 +184,11 @@ p {
         font-size: 30px;
         margin: 30px;
     }
+
+    /* .description h4{
+       text-align: left;
+       margin-left: 40px;
+    } */
 }
 
 @media (max-width: 480px) {
@@ -188,7 +203,6 @@ p {
 
     .tab-list{
         font-size: 14px;
-        
     }
    
     .video-container {
@@ -201,12 +215,14 @@ p {
         font-size: 0.8em;
     }
 
-   
     .description p{
-        margin: 5px;
+        margin: 0px;
         text-align: justify;
     }
-
+    /* .description h4{
+        text-align: left;
+        margin-left: 30px;
+    } */
 }
 
 /* Footer Section */
