--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@ body {
     color: white;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    height: 100vh;
+    /* height: 100vh;
     display: flex;
     flex-direction: column;
-    scroll-snap-type: y proximity; /* Enable scroll snap */
-    text-decoration: none;
+    /* scroll-snap-type: y proximity; Enable scroll snap
+    text-decoration: none;*/
 }
-
 
 
 
@@ -24,16 +23,13 @@ header {
     background-color: rgba(0, 0, 0, 0);
     padding: 10px 0;
     z-index: 1000;
-    text-decoration: none;
 }
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
     padding: 0 20px;
-    text-decoration: none;
 }
 
 .logo img {
@@ -47,12 +43,11 @@ nav ul {
     justify-content: center;
     padding: 0;
     margin: 0;
-    text-decoration: none;
 }
 
 nav ul{
     margin: 0;
-    margin-right: 50px;
+    margin-right: 20px;
     text-decoration: none;
 }
 
