--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     position: absolute;
     top: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
     padding: 10px 0;
     z-index: 1000;
 }
@@ -127,8 +127,8 @@ main {
 
 .description p {
     font-size: 20px;
-    margin-inline: 50px;
-    text-align: center;
+    margin-inline: 70px;
+    text-align:justify;
 }
 
 .description h4{
