--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ main {
 .description p {
     font-size: 20px;
     margin-inline: 70px;
-    text-align:justify;
+    text-align: left;
 }
 
 .description h4{
@@ -216,8 +216,8 @@ p {
     }
 
     .description p{
-        margin: 0px;
-        text-align: justify;
+        margin: -30px;
+        text-align: left;
     }
     /* .description h4{
         text-align: left;
